--- a/background.html
+++ b/background.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Venom Group Project</title>
+    <title>Background of Python and Django</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,123 +11,94 @@
             color: #e0e0e0;
             line-height: 1.6;
             margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            position: relative;
+            padding: 20px;
         }
         .container {
             background-color: #16213e;
             border-radius: 10px;
-            padding: 30px;
+            padding: 20px;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            max-width: 600px;
-            width: 100%;
-            text-align: center;
+            max-width: 900px;
+            margin: auto;
+        }
+        h1, h2 {
+            color: #f0f0f0;
         }
         h1 {
-            color: #f0f0f0;
+            text-align: center;
             margin-bottom: 20px;
-            font-size: 2.5em;
-            text-transform: uppercase;
-            letter-spacing: 2px;
         }
-        .member {
-            background-color: #0f3460;
-            margin: 10px 0;
-            padding: 15px;
-            border-radius: 5px;
-            transition: transform 0.3s ease;
+        section {
+            margin-bottom: 20px;
         }
-        .member:hover {
-            transform: scale(1.05);
-        }
-        .member-name {
-            font-weight: bold;
-            color: #e94560;
-        }
-        .member-id {
-            color: #e0e0e0;
-        }
-        .btn-top-right {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 16px;
-            color: #fff;
-            background-color: #e94560;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        .btn-top-right:hover {
-            background-color: #ff6f81;
-        }
-        .languages {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #0f3460;
-            border-radius: 5px;
-            text-align: left;
-        }
-        .languages h2 {
-            color: #f0f0f0;
+        .section-title {
             font-size: 1.5em;
+            color: #e94560;
+            margin-bottom: 10px;
         }
-        .languages ul {
-            list-style: none;
-            padding: 0;
+        ul {
+            list-style: disc;
+            margin-left: 20px;
         }
-        .languages ul li {
-            padding: 5px 0;
-            color: #e0e0e0;
+        ul li {
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
-    <!-- Button at the Top Right -->
-
-    <button class="btn-top-right" onclick="window.location.href='background.html'">Presentation</button>
-
     <div class="container">
-        <h1>Venom Group</h1>
-        <div class="member">
-            <div class="member-name">YOUSSEF IBRAHIM</div>
-            <div class="member-id">1221303870</div>
-        </div>
-        <div class="member">
-            <div class="member-name">Alieldin Emad Ali</div>
-            <div class="member-id">1221303254</div>
-        </div>
-        <div class="member">
-            <div class="member-name">Hassan Amer Hassan mohamed</div>
-            <div class="member-id">1221102149</div>
-        </div>
-        <div class="member">
-            <div class="member-name">Ba rayan Abdullah</div>
-            <div class="member-id">1221301726</div>
-        </div>
+        <h1>Background of Python and Django</h1>
 
-        <!-- Languages Section -->
-        <div class="languages">
-            <h2>Languages Used</h2>
+        <section>
+            <h2 class="section-title">1. History of Python and Django</h2>
+            <p>
+                Python was founded by Guido van Rossum in 1991 with the aim of creating a language that is easy to read, understand, and write. Django, built on Python, was created in 2005 by Adrian Holovaty and Simon Willison to streamline the creation of database-driven web applications.
+            </p>
+        </section>
+
+        <section>
+            <h2 class="section-title">2. Language Category and Programming Styles</h2>
+            <p>
+                Python is an interpreted, script-based language that supports multiple paradigms, including:
+            </p>
             <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Python-Django</li>
+                <li><strong>Imperative/Procedural Programming:</strong> Focuses on sequential steps and instructions.</li>
+                <li><strong>Object-Oriented Programming (OOP):</strong> Centers around classes and objects for modularity and reuse.</li>
             </ul>
-        </div>
-    </div>
+        </section>
 
-    <script>
-        function handlePermission() {
-            alert('Permission granted!');
-        }
-    </script>
+        <section>
+            <h2 class="section-title">3. Applications of Python and Django</h2>
+            <ul>
+                <li><strong>Web Applications:</strong> Instagram, Pinterest</li>
+                <li><strong>Educational Platforms:</strong> Coursera, EdX</li>
+                <li><strong>Content Management Systems (CMS):</strong> Mozilla Add-ons, Wagtail CMS</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2 class="section-title">4. Popularity</h2>
+            <p>
+                Python and Django are among the most popular tools for developers. In 2024, Django is used by 74% of Python developers and supports over 1.8 million websites worldwide.
+            </p>
+        </section>
+
+        <section>
+            <h2 class="section-title">5. Implementation Method</h2>
+            <ul>
+                <li><strong>Hybrid Implementation:</strong> Compiles to bytecode, interpreted by the Python Virtual Machine (PVM).</li>
+                <li><strong>Just-In-Time Compilation (JIT):</strong> Optionally speeds up performance for high-traffic applications.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2 class="section-title">6. Programming Environments</h2>
+            <ul>
+                <li><strong>IDEs:</strong> VS Code, Spyder</li>
+                <li><strong>Lightweight Editors:</strong> Sublime Text, Atom</li>
+                <li><strong>Command-Line Tools:</strong> IDLE, Django Shell</li>
+            </ul>
+        </section>
+    </div>
 </body>
 </html>
